--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,16 +3,15 @@
 {
 	"name": "Debian",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	 "image": "iljuchin/latex:debian-latex",
-	//"build": {
-	//	"dockerfile": "Dockerfile"
-	//},
+	 
+	"build": {
+		"dockerfile": "Dockerfile"
+	},
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-	//"features": {
-	//	"ghcr.io/prulloac/devcontainer-features/latex:1": {}
-	//},
+	"features": {
+		"ghcr.io/prulloac/devcontainer-features/latex:1": {}
+	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
